Updated sheet with roll macro for Techniques for easier print between players and DMs.

--- a/L5R 5th Edition Unofficial/translations/en.json
+++ b/L5R 5th Edition Unofficial/translations/en.json
@@ -165,5 +165,10 @@
     "roll-skill-dice-u": "Roll Skill Dice",
     "roll-explosive-dice-u":"To roll explosive die, click 'Roll Ring/Skill Dice' button on your sheet",
     "keep-up-to-u":"Keep up to",
-    "dice-u":"dice"
+    "activation:-u":"Activation: ",
+    "check:-u":"Check:",
+    "effects:-u":"Effects:",
+    "opportunities:-u":"Opportunities:",
+	"dice-u":"dice",
+	"print-technique-u":"Print technique in chat"
 }
