CoC7 Added Archetype and Talents for Pulp Cthulhu
Introduced two new fields for Pulp Cthulhu compatibility.

--- a/Call_of_Cthulhu_7th_Ed/translations/de.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/de.json
@@ -6,6 +6,8 @@
 	"Birthdate": "Geburtsdatum",
 	"Age": "Alter",
 	"Sex": "Geschlecht",
+	"Archetype": "Archetyp",
+	"Talents": "Talente",
 	"Residence": "Wohnort",
 	"Birthplace": "Geburtsort",
 	"Characteristics": "Attribute",
