CoC7 Translation fixed/added
Added two text Elements fromStart and fromCurrent for Sanity calculation

--- a/Call_of_Cthulhu_7th_Ed/translations/de.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/de.json
@@ -146,5 +146,8 @@
 	"Hard": "schwer",
 	"Extreme": "extrem",
 	"Fumble": "Patzer",
-	"Fail": "Fehlschlag"
+	"Fail": "Fehlschlag",
+	
+	"fromCurrent": "von aktuell",
+	"fromStart": "von Start"	
 }
