--- a/Call_of_Cthulhu_7th_Ed/translations/en.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/en.json
@@ -146,5 +146,8 @@
 	"Hard": "Hard",
 	"Extreme": "Extreme",
 	"Fumble": "Fumble",
-	"Fail": "Fail"
+	"Fail": "Fail",
+	
+	"fromCurrent": "from current",
+	"fromStart": "from start"	
 }
