--- a/Chronicles of Darkness by Roll20/translations/fr.json
+++ b/Chronicles of Darkness by Roll20/translations/fr.json
@@ -175,6 +175,7 @@
     "space": "Espace",
     "time": "Temps",
     "weapon-attack": "Arme/Attaque",
+    "weapon": "Weapon",
     "type": "Type",
     "damage-short": "Dég.",
     "damage": "Dégâts",
