--- a/Cypher Systems by Roll20/translations/es.json
+++ b/Cypher Systems by Roll20/translations/es.json
@@ -243,5 +243,12 @@
     "specialized-abbreviation": "ES",
     "used": "Utilizado",
     "simple-font": "Fuente-sencilla",
-    "limit-subsection-height": "Limitar longitud subsecciones"
+    "limit-subsection-height": "Limitar longitud subsecciones",
+    "plus-one-damage": "+1 damage",
+    "plus-two-damage": "+2 damage",
+    "plus-three-damage": "+3 damage",
+    "plus-four-damage": "+4 damage",
+    "or": "or",
+    "minor-effect": "Minor effect",
+    "major-effect": "Major effect"
 }
