--- a/Cypher Systems by Roll20/translations/pt.json
+++ b/Cypher Systems by Roll20/translations/pt.json
@@ -243,5 +243,12 @@
     "specialized-abbreviation": "E",
     "used": "Usado",
     "simple-font": "Fonte Simples",
-    "limit-subsection-height": "Limitar altura das subseções"
+    "limit-subsection-height": "Limitar altura das subseções",
+    "plus-one-damage": "+1 damage",
+    "plus-two-damage": "+2 damage",
+    "plus-three-damage": "+3 damage",
+    "plus-four-damage": "+4 damage",
+    "or": "or",
+    "minor-effect": "Minor effect",
+    "major-effect": "Major effect"
 }
