--- a/Pathfinder Community/translations/fr.json
+++ b/Pathfinder Community/translations/fr.json
@@ -1,5 +1,5 @@
 {
-	"use-header-images": "Use header images",
+	"use-header-images": "Utiliser les images d'en-tête",
 	"conditions-list": "saignement, aveuglé, recroquevillé, hébété, ébloui, mort, assourdi, hors-de-combat, se-noie, mourant, absorption-d'énergie, enchevêtré, épuisé, fasciné, fatigué, pris-au-dépourvu, agrippé, sans-défense, intangible, invisible, nauséeux, paralysé, pétrifié, immobilisé, à terre, secoué-effrayé-paniqué, fiévreux, stable, chancelant, étourdi, suffocant, inconscient",
 	"skills-list": "acrobaties, estimation, art, art-00, art-01, art-02, art-03, art-04, art-05, art-06, art-07, art-08, art-09, art-10, art-11, art-12, art-13, bluff, escalade, artisanat, artisanat-00, artisanat-01, artisanat-02, artisanat-03, artisanat-04, artisanat-05, artisanat-06, artisanat-07, artisanat-08, artisanat-09, artisanat-10, artisanat-11, artisanat-12, artisanat-13, diplomatie, sabotage, déguisement, évasion, vol, dressage, premiers-secours, intimidation, connaissances, connaissances-00, connaissances-01, connaissances-02, connaissances-03, connaissances-mystères, connaissances-exploration, connaissances-ingénierie, connaissances-géographie, connaissances-histoire, connaissances-local, connaissances-nature, connaissances-noblesse, connaissances-plans, connaissances-religion, linguistique, lore, lore-00, lore-01, lore-02, lore-03, lore-04, lore-05, lore-06, lore-07, lore-08, lore-09, lore-10, lore-11, lore-12, lore-13, perception, représentation, représentation-00, représentation-01, représentation-02, représentation-03, représentation-04, représentation-05, représentation-06, représentation-07, représentation-08, représentation-09, représentation-10, représentation-11, représentation-12, représentation-13, profession, profession-00, profession-01, profession-02, profession-03, profession-04, profession-05, profession-06, profession-07, profession-08, profession-09, profession-10, profession-11, profession-12, profession-13, équitation, psychologie, escamotage, art-de-la-magie, discrétion, survive, natation, utilisation-d'objets-magiques, divers, divers-00, divers-01, divers-02, divers-03, divers-04, divers-05, divers-06, divers-07, divers-08, divers-09, divers-10, divers-11, divers-12, divers-13, cs-acrobatie, cs-athlétisme, cs-finesse, cs-influence, cs-nature, cs-perception, cs-représentation, cs-religion, cs-société, cs-art-de-la-magie, cs-discrétion, cs-survie, cs-divers, cs-divers-00, cs-divers-01, cs-divers-02, cs-divers-03, cs-divers-04, cs-divers-05, cs-divers-06, cs-divers-07, cs-divers-08, cs-divers-09, cs-divers-10, cs-divers-11, cs-divers-12, cs-divers-13",
 	"1-ordinal": "1er",
@@ -796,7 +796,7 @@
 	"display-advanced-macros": "Afficher les champs de macro \"Ajouter au jet\"",
 	"display-advanced-macros-title": "Afficher les champs de macro avancés pour ajouter une valeur à chaque lancer de dés. La macro est évaliée lors du jet ; des demandes peuvent être utilisées. Nécessite la valeur \"0\" par défaut, et [[]] autour des jets.",
 	"display-advanced-options": " Afficher les champs supplémentaires",
-	"display-advanced-options-title": "Afficher des champs supplémentaires pour la personnalisation avancée, tels que des colonnes marquées « définies par l’utilisateur »",
+	"display-advanced-options-title": "Afficher des champs supplémentaires pour la personnalisation avancée, tels que des colonnes marquées « définies par l’utilisateur ».",
 	"display-both-whispers": "Afficher les boutons pour monstres et PnJ",
 	"display-both-whispers-title": "Afficher les deux boutons de menu en haut de la page : Jets publics et Murmurer au MJ.",
 	"display-cmb-2": "Display Alt CMB attack type",
@@ -1010,7 +1010,7 @@
 	"header-image": "Image d’en-tête",
 	"header-image-default": "Include the default header image.",
 	"header-image-none": "Do not include a header image.",
-	"heading-border-colors": "Fond et coutours de l'en-tête:",
+	"heading-border-colors": "Fond et contours de l'en-tête :",
 	"heal": "Premiers secours",
 	"heal-conditions": "Heal Conditions",
 	"health-and-wounds": "Vie et Blessures",
@@ -1188,7 +1188,7 @@
 	"linked-attacks": "Attaques liées",
 	"lists": "Listes",
 	"load-only": "Charge seulement",
-	"loading": "Loading...",
+	"loading": "Chargement...",
 	"loads": "Charges",
 	"loads-and-lift": "Charges et Soulever",
 	"local": "Local",
@@ -1649,7 +1649,7 @@
 	"roll": "Jet",
 	"roll-appearance": "Roll Appearance",
 	"roll-configuration": "Configuration des jets",
-	"roll-template": "Roll Template",
+	"roll-template": "Modèle des jets",
 	"roll-template-info": "Infos sur les modèles des jets",
 	"roll-time-custom-attributes": "Evaluate at roll time custom attributes",
 	"roll-time-custom-num-attributes": "Evaluate at roll time custom number attributes",
@@ -1899,7 +1899,7 @@
 	"stable": " Stable",
 	"staggered": " Chancelant",
 	"statistics": "STATISTIQUES",
-	"statistics-rolls-abbrv": "Jets de stats:",
+	"statistics-rolls-abbrv": "Jets de caractéristiques :",
 	"statistics-rolls-title": "Stats de défense et autres futurs blocs de stats",
 	"stealth": "Discrétion",
 	"strength": "Force",
@@ -2018,9 +2018,9 @@
 	"uses": "Utilisations",
 	"uses-attack-type": "Utilise le type d'attaque indiqué",
 	"uses-per-day": "Utilisations/Jour",
-	"uses-spell-points": " Utiliser le système de Points de Sorts",
+	"uses-spell-points": " Utiliser le système de Points de sorts",
 	"uses-spell-points-title": "Le personnage utilise les points de sorts",
-	"uses-spells": " Utilise des Sorts",
+	"uses-spells": " Utilise des sorts",
 	"uses-spells-migrated": "Uses Spells flag",
 	"uses-spells-title": "Le personnage a des sorts",
 	"v1": "Post v1",
