--- a/M-Space/translations/ru.json
+++ b/M-Space/translations/ru.json
@@ -119,7 +119,7 @@
     "steep-u": "Steep",
     "sheer-u": "Sheer",
     "movement-one-clarification-u": "Critical success on Athletics roll grants +1 movement",
-    "movement-two-clarification-u": "These jump values assume a 5m run-up.",
+    "movement-two-clarification-u": "These jump values assume a 5m run-up.  If a 5m run up is not possible these are the values instead",
     "movement-three-clarification-u": "Critical success on Swim roll grants +1 movement.  The 2nd field resolves armor penalty and if positive the character swims, if 0 floats and if negative sinks.",
     "current-u": "Current",
     "carrying-load-u": "Carrying Load",
