--- a/Symbaroum/translations/es.json
+++ b/Symbaroum/translations/es.json
@@ -2,36 +2,36 @@
 	"ability": "Habilidad",
 	"abilities": "Habilidades",
 	"accurate": "Diestro",
-	"active": "Activo",
+	"active": "Activa",
 	"armor-or-power": "Armadura o Poder",
 	"attack": "Ataque",
-	"attack-critically-hit": "Ataque impacto crítico",
-	"attack-critically-missed": "Ataque fallo crítico",
-	"attack-hit": "Ataque impactado",
-	"attack-missed": "Ataque fallado",
+	"attack-critically-hit": "Ataque crítico exitoso",
+	"attack-critically-missed": "Ataque crítico fallido",
+	"attack-hit": "Ataque exitoso",
+	"attack-missed": "Ataque fallido",
 	"attacks": "Ataques",
 	"attacks-chat": "ataca",
 	"attribute": "Atributo",
 	"attribute-not-selected": "No se ha seleccionado un atributo para esta habilidad",
 	"balanced": "Equilibrada",
 	"blunt": "Roma",
-	"bonus-damage-abbrv": "Bonus dmg",
-	"bonus-defense-abbrv": "Bonus def",
-	"bonuses-and-advantages": "Ventajas/Desventajas",
-	"bonuses-and-disadvantages": "Ventajas/Desventajas",
-	"boons": "Bendiciones",
-	"burdens": "Maldiciones",
+	"bonus-damage-abbrv": "Bonificador daño",
+	"bonus-defense-abbrv": "Bonificador def",
+	"bonuses-and-advantages": "Bonificadores/Penalizadores",
+	"bonuses-and-disadvantages": "Bonificadores/Penalizadores",
+	"boons": "Dones",
+	"burdens": "Cargas",
 	"character": "Personaje",
 	"character-background": "Transfondo de personaje",
 	"corruption": "Corrupción",
-	"cumbersome": "Cumbersome",
+	"cumbersome": "Aparatosa",
 	"cunning": "Inteligente",
 	"currency-orteg": "Orteg",
-	"currency-shilling": "Shilling",
-	"currency-thaler": "Thaleros",
+	"currency-shilling": "Chelín",
+	"currency-thaler": "Tálero",
 	"current": "Current",
 	"damage": "Daño",
-	"damage-negated": "Daño negado",
+	"damage-negated": "Daño evitado",
 	"deep-impact": "Impacto Agravado",
 	"defends": "defiende",
 	"defenses": "Defensa",
@@ -39,7 +39,7 @@
 	"detailed-equipment-and-artifacts": "Equipamiento &amp; Artefactos detallados",
 	"dice-roll": "Tiradas",
 	"discreet": "Discreto",
-	"does-extra-damage": "Hace daño extra",
+	"does-extra-damage": "Hace daño adicional",
 	"effect": "Efecto",
 	"enemy-critically-hit": "Impacto critico del enemigo",
 	"enemy-critically-missed": "Fallo critico del enemigo",
@@ -62,24 +62,24 @@
 	"items": "Objetos",
 	"jointed": "Articulada",
 	"long": "Larga",
-	"maximum-abbrv": "Max",
+	"maximum-abbrv": "Máx",
 	"mystical-powers": "Poderes Místicos",
 	"name": "Nombre",
-	"negates-extra-damage": "niega el daño extra",
+	"negates-extra-damage": "niega el daño adicional",
 	"negation": "Negación",
 	"occupation": "Ocupación",
-	"pain-threshold-abbrv": "Umbral del dolor",
+	"pain-threshold-abbrv": "Umbral de dolor",
 	"passive": "Pasiva",
 	"permanent-abbrv": "Perm.",
 	"persuasive": "Persuasivo",
 	"player": "jugador",
-	"power": "MPoder Místico",
+	"power": "Poder Místico",
 	"precise": "Precisa",
 	"quality": "Calidad",
 	"quick": "Ágil",
 	"quote": "Cita",
 	"race": "Raza",
-	"reactive": "Reactiva",
+	"reactive": "Reacción",
 	"resolute": "Tenaz",
 	"ritual": "Ritual",
 	"rituals": "Rituales",
@@ -88,49 +88,49 @@
 	"select": "Selección",
 	"short": "Corta",
 	"special": "Especial",
-	"strong": "Fuerte",
+	"strong": "Potente",
 	"success": "Éxito",
 	"temporary-abbrv": "Temp.",
-	"temporary-corruption": "Temp Corrupción",
-	"temporary-corruption-abbrv": "Temp Corrupción",
+	"temporary-corruption": "Corrupción temp.",
+	"temporary-corruption-abbrv": "Corrupción temp.",
 	"threshold": "Umbral",
 	"title-ability-action-type": "Tipo de acción de la habilidad",
 	"title-ability-check": "Chequeo de habilidad",
 	"title-ability-description": "Descripción de la habilidad",
 	"title-ability-name": "Nombre de la habilidad",
-	"title-ability-that-determines-defense": "Ability that determines defense, usually Quick",
-	"title-adept": "Adept",
-	"title-any-bonus-to-defense": "Cualquier bonus a la armadura, incluyendo escudos",
-	"title-armor-or-power-explanation": "La armadura que esta usando el personaje, o cualquier poder usado en defensa",
+	"title-ability-that-determines-defense": "Habilidad que determina la defensa, normalmente ágil",
+	"title-adept": "Adepto",
+	"title-any-bonus-to-defense": "Cualquier bonificador a la armadura, incluyendo escudos",
+	"title-armor-or-power-explanation": "La armadura que esta utilizando el personaje, o cualquier poder utilizado en defensa",
 	"title-armor-quality": "Flexible, Pesada, etc.",
-	"title-armors-impending-penalty": "Penalizador de incomodidad de la armadura",
+	"title-armors-impending-penalty": "Penalizador de impedimento de la armadura",
 	"title-attack-roll": "Tirada de ataque del arma",
-	"title-attribute-ability": "Atributo usado para los chequeos de habilidad",
+	"title-attribute-ability": "Atributo utilizado para los chequeos de habilidad",
 	"title-attribute-explanation": "Habilidad que determina el impacto, normalmente Preciso",
-	"title-bond-to-player": "Ligado al jugador",
-	"title-bonus-to-attack-roll": "Bonus a tiradas de ataque",
-	"title-bonus-to-damage": "Bonus al daño",
-	"title-boon-action-type": "Tipo de acción de la bendición",
-	"title-boon-description": "Descripción de la bendición",
-	"title-boon-name": "Nombre de la bendición",
-	"title-burden-action-type": "Tipo de acción de la maldición",
-	"title-burden-description": "Descripción de la maldición",
-	"title-burden-name": "Nombre de la maldición",
-	"title-button-does-nothing": "¿Creias que este boton hacía algo? jaja nope.",
+	"title-bond-to-player": "Vinculado al jugador",
+	"title-bonus-to-attack-roll": "Bonificador a la tirada de ataque",
+	"title-bonus-to-damage": "Bonificador al daño",
+	"title-boon-action-type": "Tipo de acción del don",
+	"title-boon-description": "Descripción del don",
+	"title-boon-name": "Nombre del don",
+	"title-burden-action-type": "Tipo de acción de la carga",
+	"title-burden-description": "Descripción de la carga",
+	"title-burden-name": "Nombre de la carga",
+	"title-button-does-nothing": "¿Creías que este boton hacía algo? jaja nope.",
 	"title-character-background": "Explica de donde viene tu personaje y hacia donde quiere ir, sus metas y sus peculiaridades.",
 	"title-character-sheet": "Ficha de personaje",
-	"title-choose-dice-and-roll": "Pick a dice value (to the right) and hit this button to roll",
-	"title-damage-negated": "Daño negado por habilidad",
+	"title-choose-dice-and-roll": "Elige un tipo de dado (a la derecha) y dale a este botón para tirar",
+	"title-damage-negated": "Daño evitado por una habilidad",
 	"title-damage-reduction": "Cualquier reducción de daño de habilidades u objetos",
 	"title-defense-armor": "Tirada de defensa para la armadura",
 	"title-equipment-group-and-friends": "Equipamiento, Grupo y Amigos",
-	"title-extra-damage-roll": "Daño extra a causa de una habilidad",
+	"title-extra-damage-roll": "Daño adicional debido a una habilidad",
 	"title-item-name": "Nombre del objeto",
-	"title-item-quantity": "Cantidad del objeto",
-	"title-master": "Master",
-	"title-mystical-power-attribute": "Atributo usado para el poder místico",
+	"title-item-quantity": "Cantidad",
+	"title-master": "Maestro",
+	"title-mystical-power-attribute": "Atributo utilizado para el poder místico",
 	"title-mystical-power-check": "Chequeo de poder místico",
-	"title-novice": "Novato",
+	"title-novice": "Principiante",
 	"title-power-attribute": "Atributo para el poder místico",
 	"title-power-description": "Descripción del poder",
 	"title-powers-name": "Nombre del poder",
@@ -138,27 +138,27 @@
 	"title-ritual-description": "Descripción del ritual",
 	"title-ritual-name": "Nombre del ritual",
 	"title-rituals-and-powers": "Rituales y Poderes",
-	"title-standard-equipment": "Equipamiento estandar",
-	"title-temporary-corruption-when-equipment-is-used": "Corrupcion temporal cuando se usan objetos o artefactos",
-	"title-temporary-corruption-when-power-is-used": "Corrupcion temporal cuando se usan poderes",
-	"title-temporary-corruption-when-ritual-is-used": "Corrupcion temporal cuando se usan rituales",
+	"title-standard-equipment": "Equipamiento estándar",
+	"title-temporary-corruption-when-equipment-is-used": "Corrupción temporal cuando se utilizan objetos o artefactos",
+	"title-temporary-corruption-when-power-is-used": "Corrupción temporal cuando se utilizan poderes",
+	"title-temporary-corruption-when-ritual-is-used": "Corrupción temporal cuando se utilizan rituales",
 	"title-trait-ability": "Attribute used for Trait",
 	"title-trait-action-type": "Tipo de acción de rasgo",
-	"title-trait-check": "Chequeo de rasgo",
+	"title-trait-check": "Tirada de rasgo",
 	"title-trait-description": "Descripción de rasgo",
 	"title-trait-name": "Nombre de rasgo",
 	"title-traits-and-abilities": "Rasgos y Habilidades",
-	"title-use-attack": "Usa ataque!",
-	"title-weapon-or-power-used": "Weapon or power used in attack",
-	"title-weapon-quality": "Balanced, Blunt, Deep Impact, Jointed, Long, Precise, Short, etc.",
-	"title-worn-armor-or-power": "La armadura que esta usando el personaje, o poder usado para defensa",
+	"title-use-attack": "¡Utilizar este ataque!",
+	"title-weapon-or-power-used": "Arma o poder utilizado en el ataque",
+	"title-weapon-quality": "Aparatosa, articulada, corta, equilibrada, flexible etc.",
+	"title-worn-armor-or-power": "La armadura que esta utilizando el personaje, o poder utilizado para la defensa",
 	"total": "Total",
 	"toughness": "Resistencia",
 	"trait": "Rasgo",
 	"traits": "Rasgos",
 	"traits-and-abilities": "Rasgos | Habilidades",
 	"unspent": "Sin gastar",
-	"using": "usando",
+	"using": "utilizando",
 	"vigilant": "Atento",
 	"weapon-or-power": "Arma o Poder",
 	"with": "con"
