Savage Worlds Tabbed 3.6 - Added animal intelligence - fix renaming skills in game settings - fix statblock rolling Smarts and Spirit

--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -99,6 +99,7 @@
     "spirit": "Âme",
     "strength": "Force",
     "vigor": "Vigueur",
+	"animal-intelligence":"Intelligence animale",
     "health": "Santé",
     "wounds": "Blessures",
     "max-wounds": "Max Wounds",
@@ -156,7 +157,7 @@
     "show-all": "All",
     "show-boating": "Afficher Navigation",
     "show-climbing": "Afficher Escalade",
-    "show-driving": "Afficher Pilotage",
+    "show-driving": "Afficher Conduite",
     "show-faith": "Afficher Foi",
     "show-gambling": "Afficher Jeu",
     "show-guts": "Afficher Tripes",
@@ -166,7 +167,7 @@
     "show-lockpicking": "Afficher Crochetage",
     "show-notice": "Afficher Perception",
     "show-persuasion": "Afficher Persuasion",
-    "show-piloting": "Afficher Conduite",
+    "show-piloting": "Afficher Pilotage",
     "show-psionics": "Afficher Psionics",
     "show-repair": "Afficher Réparation",
     "show-riding": "Afficher Équitation",
@@ -190,7 +191,7 @@
     "boating": "Navigation",
     "climbing": "Escalade",
     "common-knowledge": "Culture Générale",
-    "driving": "Pilotage",
+    "driving": "Conduite",
     "electronics": "Électronique",
     "faith": "Foi",
     "focus": "Focus",
@@ -206,7 +207,7 @@
     "occult": "Occulte",
     "performance": "Représentation",
     "persuasion": "Persuasion",
-    "piloting": "Conduite",
+    "piloting": "Pilotage",
     "psionics": "Psioniques",
     "psionic-ability": "Psionic Ability",
     "research": "Recherche",
@@ -788,8 +789,8 @@
     "whisper-all-rolls-to-gm": "Murmurer tous les jets au MJ",
     "whisper-roll-to-gm": "Murmurer au MJ",
     "version": "Version",
-    "the": "Le",
-    "logo-info": "logo est une marque de ",
+    "the": "Le logo",
+    "logo-info": "est une marque de ",
     "main-character-view": "Informations principales",
     "journal-and-other-info": "Journal et autres",
     "sheet-configuration": "Configuration",
@@ -1039,6 +1040,7 @@
     "rename-skill-athletics": "Renommer : Athlétisme",
     "rename-skill-battle": "Renommer : Batailles",
     "rename-skill-boating": "Renommer : Navigation",
+	"rename-skill-climbing": "Renommer : Escalade",
     "rename-skill-common-knowledge": "Renommer : Culture générale",
     "rename-skill-driving": "Renommer : Pilotage",
     "rename-skill-electronics": "Renommer : Électronique",
@@ -1056,6 +1058,7 @@
     "rename-skill-occult": "Renommer : Occultisme",
     "rename-skill-performance": "Renommer : Représentation",
     "rename-skill-persuasion": "Renommer : Persuasion",
+	"rename-skill-piloting":"Renommer : Pilotage",
     "rename-skill-psionics": "Renommer : Psioniques",
     "rename-skill-repair": "Renommer : Réparation",
     "rename-skill-research": "Renommer : Recherche",
@@ -1083,5 +1086,9 @@
     "rename-skills-from-game-settings": "Allow to rename skills directly from game settings page",
     "wounds-fatigue-wonky-display": "Wounds and Fatigue modifiers display going wonky when translations where too long (e.g. French). Fixed by reducing the font size for all languages.",
     "allow-translations-academics": "Allowed Academics (derived stat) and Acedemics (SWADE Skill) to have different translations (e.g. French).",
-    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal."
+    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal.",
+	"missing-translations-default-sheet-settings-rename-piloting-climbing":"Default sheet settings : missing translations entries for 'rename piloting' and 'rename climbing' settings options.",
+	"renaming-skills-default-sheet-settings-not-working":"Default sheet settings : Renaming skills on the Game Setting page would not transfer in game on character sheets.",
+	"added-animal-smarts":"Ability to flag Smarts as "Animal Intelligence", which then appears as (A) in character sheet and statblocks.",
+	"statblocks-rolling-smarts-spirit-would-fail":"StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail."
 }
