--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -34,6 +34,7 @@
 	"cold": "Frigorifié",
 	"condition-u": "CONDITIONS",
 	"consumable-u": "CONSOMMABLES",
+	"consumable-note": "**note:** be sure to manually reduce the consumable die on the sheet if you roll bane.",
 	"copper": "Cuivre",
 	"crafting": "Artisanat",
 	"critical-injuries": "Blessures Critique",
