--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -34,6 +34,7 @@
 	"cold": "crwdns90842:0crwdne90842:0",
 	"condition-u": "crwdns90844:0crwdne90844:0",
 	"consumable-u": "crwdns90846:0crwdne90846:0",
+	"consumable-note": "crwdns110836:0crwdne110836:0",
 	"copper": "crwdns90848:0crwdne90848:0",
 	"crafting": "crwdns90850:0crwdne90850:0",
 	"critical-injuries": "crwdns90852:0crwdne90852:0",
