--- a/MouseGuard/translations/ru.json
+++ b/MouseGuard/translations/ru.json
@@ -2,7 +2,7 @@
 	"Name": "Имя",
 	"Home": "Дом",
 	"GuardRank": "Ранг Стражи",
-	"Age": "Возвраст",
+	"Age": "Возраст",
 	"FurColor": "Цвет шёрстки",
 	"CloakColor": "Цвет плаща",
 	"Fate": "Баллы судьбы",
