--- a/Mythras/translations/zu.json
+++ b/Mythras/translations/zu.json
@@ -13,6 +13,7 @@
     "arcane-caster-order": "crwdns90614:0crwdne90614:0",
     "divine-caster-order": "crwdns90616:0crwdne90616:0",
     "resist-order": "crwdns90618:0crwdne90618:0",
+    "social-conflict-attribute-order": "crwdns110804:0crwdne110804:0",
     "settings-u": "crwdns56675:0crwdne56675:0",
     "version-u": "crwdns90620:0crwdne90620:0",
     "setting-u": "crwdns56677:0crwdne56677:0",
@@ -869,5 +870,20 @@
     "mundane-u": "crwdns110244:0crwdne110244:0",
     "tradition-u": "crwdns110246:0crwdne110246:0",
     "traditions-u": "crwdns110248:0crwdne110248:0",
-    "ten-minutes-u": "crwdns110250:0crwdne110250:0"
+    "ten-minutes-u": "crwdns110250:0crwdne110250:0",
+    "social-conflict-enabled-u": "crwdns110806:0crwdne110806:0",
+    "social-conflict-enabled-description-u": "crwdns110808:0crwdne110808:0",
+    "social-conflict-u": "crwdns110810:0crwdne110810:0",
+    "confidence-u": "crwdns110812:0crwdne110812:0",
+    "social-damage-u": "crwdns110814:0crwdne110814:0",
+    "social-initiative-u": "crwdns110816:0crwdne110816:0",
+    "resolution-pool-u": "crwdns110818:0crwdne110818:0",
+    "composure-u": "crwdns110820:0crwdne110820:0",
+    "integrity-u": "crwdns110822:0crwdne110822:0",
+    "resolve-u": "crwdns110824:0crwdne110824:0",
+    "attack-skill-u": "crwdns110826:0crwdne110826:0",
+    "defense-skill-u": "crwdns110828:0crwdne110828:0",
+    "attack-u": "crwdns110830:0crwdne110830:0",
+    "defense-u": "crwdns110832:0crwdne110832:0",
+    "resolution-pools-u": "crwdns110834:0crwdne110834:0"
 }
