--- a/SavageWorlds-Tabbed/translations/en.json
+++ b/SavageWorlds-Tabbed/translations/en.json
@@ -99,7 +99,6 @@
     "spirit": "Spirit",
     "strength": "Strength",
     "vigor": "Vigor",
-	"animal-intelligence":"Animal intelligence",
     "health": "Health",
     "wounds": "Wounds",
     "max-wounds": "Max Wounds",
@@ -1040,7 +1039,6 @@
     "rename-skill-athletics": "Rename : Athletics",
     "rename-skill-battle": "Rename : Battle",
     "rename-skill-boating": "Rename : Boating",
-	"rename-skill-climbing": "Rename : Climbing",
     "rename-skill-common-knowledge": "Rename : Common Knowledge",
     "rename-skill-driving": "Rename : Driving",
     "rename-skill-electronics": "Rename : Electronics",
@@ -1058,7 +1056,6 @@
     "rename-skill-occult": "Rename : Occult",
     "rename-skill-performance": "Rename : Performance",
     "rename-skill-persuasion": "Rename : Persuasion",
-	"rename-skill-piloting":"Rename : Piloting",
     "rename-skill-psionics": "Rename : Psionics",
     "rename-skill-repair": "Rename : Repair",
     "rename-skill-research": "Rename : Research",
@@ -1086,9 +1083,5 @@
     "rename-skills-from-game-settings": "Allow to rename skills directly from game settings page",
     "wounds-fatigue-wonky-display": "Wounds and Fatigue modifiers display going wonky when translations where too long (e.g. French). Fixed by reducing the font size for all languages.",
     "allow-translations-academics": "Allowed Academics (derived stat) and Acedemics (SWADE Skill) to have different translations (e.g. French).",
-    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal.",
-	"missing-translations-default-sheet-settings-rename-piloting-climbing":"Default sheet settings : missing translations entries for 'rename piloting' and 'rename climbing' settings options.",
-	"renaming-skills-default-sheet-settings-not-working":"Default sheet settings : Renaming skills on the Game Setting page would not transfer in game on character sheets.",
-	"added-animal-smarts":"Ability to flag Smarts as "Animal Intelligence", which then appears as (A) in character sheet and statblocks.",
-	"statblocks-rolling-smarts-spirit-would-fail":"StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail."
+    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal."
 }
