--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -99,7 +99,6 @@
     "spirit": "Âme",
     "strength": "Force",
     "vigor": "Vigueur",
-	"animal-intelligence":"Intelligence animale",
     "health": "Santé",
     "wounds": "Blessures",
     "max-wounds": "Max Wounds",
@@ -157,7 +156,7 @@
     "show-all": "All",
     "show-boating": "Afficher Navigation",
     "show-climbing": "Afficher Escalade",
-    "show-driving": "Afficher Conduite",
+    "show-driving": "Afficher Pilotage",
     "show-faith": "Afficher Foi",
     "show-gambling": "Afficher Jeu",
     "show-guts": "Afficher Tripes",
@@ -167,7 +166,7 @@
     "show-lockpicking": "Afficher Crochetage",
     "show-notice": "Afficher Perception",
     "show-persuasion": "Afficher Persuasion",
-    "show-piloting": "Afficher Pilotage",
+    "show-piloting": "Afficher Conduite",
     "show-psionics": "Afficher Psionics",
     "show-repair": "Afficher Réparation",
     "show-riding": "Afficher Équitation",
@@ -191,7 +190,7 @@
     "boating": "Navigation",
     "climbing": "Escalade",
     "common-knowledge": "Culture Générale",
-    "driving": "Conduite",
+    "driving": "Pilotage",
     "electronics": "Électronique",
     "faith": "Foi",
     "focus": "Focus",
@@ -207,7 +206,7 @@
     "occult": "Occulte",
     "performance": "Représentation",
     "persuasion": "Persuasion",
-    "piloting": "Pilotage",
+    "piloting": "Conduite",
     "psionics": "Psioniques",
     "psionic-ability": "Psionic Ability",
     "research": "Recherche",
@@ -288,7 +287,7 @@
     "ground-vehicle": "Véhicule Terrestre",
     "vehicles-armaments": "Armement du Véhicule",
     "name-or-num": "Nom ou #",
-    "walker": "Walker",
+    "walker": "Marcheur",
     "walkers-armaments": "Armement du Walker",
     "walkers-crew": "Équipage du Walkers",
     "power-armor": "Power Armor",
@@ -472,7 +471,7 @@
     "psionics-text": "Remplace Pouvoirs par Psionics. Utilisé pour les personnages utilisant des Pouvoirs Psi.",
     "spells-text": "Remplace Pouvoirs par Sorts. Utilisé par les personnages utilisant la magie traditionnelle.",
     "spells": "Sorts",
-    "spell": "Spell",
+    "spell": "Sort",
     "rituals-text": "Remplace Pouvoirs par Rituels. Utilisé par les personnages ou mondes (comme ETU) dont les pouvoirs sur de nature rituelles.",
     "rituals": "Rituels",
     "weird-science-gadgets-text": "Remplace Pouvoirs par Science Étrange. Utilisé par les personnages dont la magie passe par la création de Gadgets ou Machines comme les Savants Fous de Deadlands.",
@@ -789,8 +788,8 @@
     "whisper-all-rolls-to-gm": "Murmurer tous les jets au MJ",
     "whisper-roll-to-gm": "Murmurer au MJ",
     "version": "Version",
-    "the": "Le logo",
-    "logo-info": "est une marque de ",
+    "the": "Le",
+    "logo-info": "logo est une marque de ",
     "main-character-view": "Informations principales",
     "journal-and-other-info": "Journal et autres",
     "sheet-configuration": "Configuration",
@@ -1040,7 +1039,6 @@
     "rename-skill-athletics": "Renommer : Athlétisme",
     "rename-skill-battle": "Renommer : Batailles",
     "rename-skill-boating": "Renommer : Navigation",
-	"rename-skill-climbing": "Renommer : Escalade",
     "rename-skill-common-knowledge": "Renommer : Culture générale",
     "rename-skill-driving": "Renommer : Pilotage",
     "rename-skill-electronics": "Renommer : Électronique",
@@ -1058,7 +1056,6 @@
     "rename-skill-occult": "Renommer : Occultisme",
     "rename-skill-performance": "Renommer : Représentation",
     "rename-skill-persuasion": "Renommer : Persuasion",
-	"rename-skill-piloting":"Renommer : Pilotage",
     "rename-skill-psionics": "Renommer : Psioniques",
     "rename-skill-repair": "Renommer : Réparation",
     "rename-skill-research": "Renommer : Recherche",
@@ -1086,9 +1083,5 @@
     "rename-skills-from-game-settings": "Allow to rename skills directly from game settings page",
     "wounds-fatigue-wonky-display": "Wounds and Fatigue modifiers display going wonky when translations where too long (e.g. French). Fixed by reducing the font size for all languages.",
     "allow-translations-academics": "Allowed Academics (derived stat) and Acedemics (SWADE Skill) to have different translations (e.g. French).",
-    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal.",
-	"missing-translations-default-sheet-settings-rename-piloting-climbing":"Default sheet settings : missing translations entries for 'rename piloting' and 'rename climbing' settings options.",
-	"renaming-skills-default-sheet-settings-not-working":"Default sheet settings : Renaming skills on the Game Setting page would not transfer in game on character sheets.",
-	"added-animal-smarts":"Ability to flag Smarts as "Animal Intelligence", which then appears as (A) in character sheet and statblocks.",
-	"statblocks-rolling-smarts-spirit-would-fail":"StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail."
+    "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal."
 }
