--- a/Mythras/translations/pl.json
+++ b/Mythras/translations/pl.json
@@ -13,6 +13,7 @@
     "arcane-caster-order": "bard,magic-user",
     "divine-caster-order": "bard,cleric,druid,paladin,ranger",
     "resist-order": "blank,brawn,endurance,evade,willpower,special",
+    "social-conflict-attribute-order": "confidence,damage,initiative",
     "settings-u": "Settings",
     "version-u": "Version",
     "setting-u": "Setting",
@@ -869,5 +870,20 @@
     "mundane-u": "Mundane",
     "tradition-u": "Tradition",
     "traditions-u": "Traditions",
-    "ten-minutes-u": "10 Minutes"
+    "ten-minutes-u": "10 Minutes",
+    "social-conflict-enabled-u": "Social Conflict Enabled",
+    "social-conflict-enabled-description-u": "Use social conflict rules from the Mythras Companion.",
+    "social-conflict-u": "Social Conflict",
+    "confidence-u": "Confidence",
+    "social-damage-u": "Social Damange",
+    "social-initiative-u": "Social Initiative",
+    "resolution-pool-u": "Resolution Pool",
+    "composure-u": "Composure",
+    "integrity-u": "Integrity",
+    "resolve-u": "Resolve",
+    "attack-skill-u": "Attack Skill",
+    "defense-skill-u": "Defense Skill",
+    "attack-u": "Attack",
+    "defense-u": "Defense",
+    "resolution-pools-u": "Resolution Pools"
 }
