--- a/Warhammer40k-WrathandGlory/translations/fr.json
+++ b/Warhammer40k-WrathandGlory/translations/fr.json
@@ -43,7 +43,7 @@
 	"info": "Info",
 	"initiative": "initiative",
 	"insight": "psychologie",
-	"intellect": "intellect",
+	"intellect": "intelligence",
 	"intimidation": "intimidation",
 	"investigation": "investigation",
 	"keywords": "mots clés",
