--- a/5th Edition OGL by Roll20/translations/zh.json
+++ b/5th Edition OGL by Roll20/translations/zh.json
@@ -274,7 +274,6 @@
 	"jack-of-all-u": "多才多藝",
 	"attr:-u": "屬性:",
 	"tool-prof-u": "工具熟練項",
-	"weapon-proficiencies-u": "WEAPON PROFICIENCIES",
 	"other-prof-langs-u": "其他熟練項 &amp; 語言",
 	"prof-langs-u": "熟練項 &amp; 語言",
 	"init": "先攻",
@@ -381,8 +380,6 @@
 	"subclass:-u": "子職:",
 	"race:-u": "種族:",
 	"subrace:-u": "亞種:",
-	"subrace": "Subrace:",
-	"subrace-ability-increase": "Subrace Ability Score Increase:",
 	"2nd-class:-u": "第二職業:",
 	"lvl:-u": "等級:",
 	"3rd-class:-u": "第三職業:",
@@ -498,7 +495,6 @@
 	"racial": "Racial",
 	"class": "職業",
 	"feat": "專長",
-	"feats": "Feats",
 	"other": "Other",
 	"partial": "部分",
 	"show_all": "顯示全部",
@@ -618,48 +614,5 @@
 	"charmancer-leveler-what-is-lp": "看看您，獲得了那麼多經驗後。現在是時候要求您的獎勵了。您會一步一步地做一些決定，您的角色很快就會升上下一個等級。在整個過程中會保存更改，但是如果您改變了主意，則需要重新查看之後的步驟和選擇。",
 	"charmancer-compendium-detail-lp": "The Charactermancer目前支持龍與地下城第5版SRD、玩家手冊和Guildmasters' Guide to Ravnica。珊娜薩的萬事指南將在未來幾週內得到支持。您可以在商城中將玩家手冊和Guildmasters' Guide to Ravnica添加到compendium中，或者遊戲所有者可以與遊戲中的每個人分享他的compendium。",
 	"roll:-u": "ROLL:",
-	"roll": "Roll",
-	"prerequisite:": "先決條件:",
-	"back": "BACK",
-	"back-to-top": "Back to Top",
-	"choose-a-class:": "Choose a Class:",
-	"custom-class-name:": "Custom Class Name",
-	"hit-die:": "Hit Die:",
-	"saving-throw-proficiency": "Saving Throw Proficiency",
-	"armor": "Armor",
-	"equipment": "Equipment:",
-	"language": "Language",
-	"skill": "Skill",
-	"tool": "Tool",
-	"weapon": "Weapon",
-	"add-another-feature": "Add Another Feature",
-	"add-another-proficiency": "Add Another Proficiency",
-	"innate-spellcasting:": "Innate Spellcasting:",
-	"spellcasting-ability": "Spellcasting Ability:",
-	"number-of-cantrips": "Number of Cantrips:",
-	"number-of-lvl-1-spells": "Number of Level 1 Spells:",
-	"spell-list": "Spell List:",
-	"ability-score-method": "Ability Score Method:",
-	"select-your-choices": "Select Your Choices:",
-	"input-your-scores": "Input Your Scores:",
-	"choose-background": "Choose a Background:",
-	"personality-traits": "Personality Traits",
-	"ideal": "Ideal",
-	"bond": "Bond",
-	"flaw": "Flaw",
-	"you-have-chosen-starting-gold": "You have chosen starting gold and do not get equipment from your background.",
-	"you-have-created-custom-class": "You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.",
-	"arcane-is-mystery": "The Arcane is a mystery to you.",
-	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
-	"charmancer-a-feat-represents": "A feat represents accomplishment, grit, determination, and expertise. It is the reward for hard work.",
-	"you-really-havent-done": "You really haven't done that much yet",
-	"review-your-choices": "Review your choices:",
-	"race": "Race",
-	"abilities": "Abilities",
-	"bio": "Bio",
-	"name-background": "Name:",
-	"apply-changes": "Apply Changes",
-	"pick-your-equipment": "Pick your equipment",
-	"you-havent-chosen-background": "You have not yet selected a background.",
-	"you-havent-selected-class": "You have not yet selected a class."
+	"prerequisite:": "先決條件:"
 }
