--- a/Call_of_Cthulhu_7th_Ed/translations/fr.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/fr.json
@@ -30,12 +30,11 @@
 	"Move rate-r-txt": "Jet de Mouvement",
 	"HP-u": "Points de vie/PV",
 	"HP-r-txt": "Jet de Points de vie/PV",
-	"": "Actuel",
-	"majorwound-u": "",
-	"pulphp-u": "",
+	"current": "Actuel",
+	"majorwound-u": "Major Wound",
+	"pulphp-u": "Pulp HP",
 	"luck-u": "Chance",
 	"luck-r-txt": "Jet de Chance",
-	"current": "Actuel",
 	"damagebonus-u": "Impact",
 	"None": "Aucun",
 	"build-u": "Carrure",
@@ -43,6 +42,8 @@
 	"pulp-z": "Pulp",
 	"sanity-r-txt": "Jet de Santé mentale",
 	"start": "Initiale",
+	"current-u": "current",
+	"max-u": "max",
 	"tempinsane-u": "Folie Temp. (5 pts) :",
 	"indefinsane-u": " : Folie Persist. (1/5 SAN)",
 	"bouts-of-madness-u": "Folies Temporaires",
@@ -242,12 +243,21 @@
 	"Other Skill #10": "Autre Compétence #10",
 	"companions&mounts-u": "Montures et Compagnions",
 	"vehicles-u": "Véhicules",
+	"cap-u": "Capacity",
+	"vehicleattack-u": "Vehicular Impact Attack",
+	"operatorskill": "Operator's Skill",
+	"MountedWeaponSkill": "Mounted Weapon Skill",
+	"generalinfo-u": "General Info",
+	"cargo-u": "Cargo",
+	"passengers-u": "Passengers",
 	"san-u": "SAN",
 	"HP-z": "PV",
+	"MP-z": "MP",
 	"armor-z": "Armure :",
 	"db-z": "Imp.",
 	"bdb-u": "Car/Imp",
 	"damage&db-z": "Dég+Imp",
+	"dam-z": "Dam",
 	"MOV-u": "MVT",
 	"skill1": "Compétence 1",
 	"skill2": "Compétence 2",
