--- a/Call_of_Cthulhu_7th_Ed/translations/zu.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/zu.json
@@ -30,12 +30,11 @@
 	"Move rate-r-txt": "crwdns86516:0crwdne86516:0",
 	"HP-u": "crwdns36988:0crwdne36988:0",
 	"HP-r-txt": "crwdns86518:0crwdne86518:0",
-	"": "crwdns64798:0crwdne64798:0",
-	"majorwound-u": "crwdns36989:0crwdne36989:0",
-	"pulphp-u": "crwdns36990:0crwdne36990:0",
+	"current": "crwdns64799:0crwdne64799:0",
+	"majorwound-u": "crwdns113696:0crwdne113696:0",
+	"pulphp-u": "crwdns113698:0crwdne113698:0",
 	"luck-u": "crwdns36991:0crwdne36991:0",
 	"luck-r-txt": "crwdns86520:0crwdne86520:0",
-	"current": "crwdns64799:0crwdne64799:0",
 	"damagebonus-u": "crwdns36992:0crwdne36992:0",
 	"None": "crwdns64800:0crwdne64800:0",
 	"build-u": "crwdns36993:0crwdne36993:0",
@@ -43,6 +42,8 @@
 	"pulp-z": "crwdns86746:0crwdne86746:0",
 	"sanity-r-txt": "crwdns86522:0crwdne86522:0",
 	"start": "crwdns64801:0crwdne64801:0",
+	"current-u": "crwdns113700:0crwdne113700:0",
+	"max-u": "crwdns113702:0crwdne113702:0",
 	"tempinsane-u": "crwdns64802:0crwdne64802:0",
 	"indefinsane-u": "crwdns64803:0crwdne64803:0",
 	"bouts-of-madness-u": "crwdns86524:0crwdne86524:0",
@@ -242,12 +243,21 @@
 	"Other Skill #10": "crwdns64817:0crwdne64817:0",
 	"companions&mounts-u": "crwdns105754:0crwdne105754:0",
 	"vehicles-u": "crwdns106316:0crwdne106316:0",
+	"cap-u": "crwdns113704:0crwdne113704:0",
+	"vehicleattack-u": "crwdns113706:0crwdne113706:0",
+	"operatorskill": "crwdns113708:0crwdne113708:0",
+	"MountedWeaponSkill": "crwdns113710:0crwdne113710:0",
+	"generalinfo-u": "crwdns113712:0crwdne113712:0",
+	"cargo-u": "crwdns113714:0crwdne113714:0",
+	"passengers-u": "crwdns113716:0crwdne113716:0",
 	"san-u": "crwdns87964:0crwdne87964:0",
 	"HP-z": "crwdns86780:0crwdne86780:0",
+	"MP-z": "crwdns113718:0crwdne113718:0",
 	"armor-z": "crwdns86782:0crwdne86782:0",
 	"db-z": "crwdns86784:0crwdne86784:0",
 	"bdb-u": "crwdns87966:0crwdne87966:0",
 	"damage&db-z": "crwdns87968:0crwdne87968:0",
+	"dam-z": "crwdns113720:0crwdne113720:0",
 	"MOV-u": "crwdns87970:0crwdne87970:0",
 	"skill1": "crwdns86788:0crwdne86788:0",
 	"skill2": "crwdns86790:0crwdne86790:0",
