--- a/Stars_Without_Number_Revised/translations/de.json
+++ b/Stars_Without_Number_Revised/translations/de.json
@@ -623,7 +623,7 @@
 	"PHARMACEUTICALS": "Pharmaceuticals",
 	"PHYSICAL": "Physisch",
 	"PHYSICAL_SAVE": "Physischer Rettungswurf",
-	"PILOT": "Pilot",
+	"PILOT": "Fahrzeuge/Tiere steuern",
 	"PIRATE_KING": "Pirate King",
 	"PLANETARY_DEFENSE_ARRAY": "Planetary Defense Array",
 	"PLANETARY_DEFENSE_ARRAY_DESC": "Anti-impact and anti-nuke surface defenses.",
