--- a/Tremulus/translations/es.json
+++ b/Tremulus/translations/es.json
@@ -4,7 +4,7 @@
 	"lbl-success": "¡Éxito!",
 	"lbl-partialsuccess": "Éxito Parcial",
 	"lbl-fail": "¡Fallo!",
-	"lbl-rolls": "rolls",
+	"lbl-rolls": "tira",
 	"playbook-alienist": "Alienista",
 	"playbook-antiquarian": "Anticuario",
 	"playbook-author": "Autor",
