--- a/5th Edition OGL by Roll20/translations/de.json
+++ b/5th Edition OGL by Roll20/translations/de.json
@@ -274,7 +274,6 @@
 	"jack-of-all-u": "Vielfältig begabt",
 	"attr:-u": "Attribute:",
 	"tool-prof-u": "Werkzeug Begabungen",
-	"weapon-proficiencies-u": "WEAPON PROFICIENCIES",
 	"other-prof-langs-u": "Andere Begabungen &amp; Sprachen",
 	"prof-langs-u": "Begabungen &amp; Sprachen",
 	"init": "Initiative",
@@ -381,8 +380,6 @@
 	"subclass:-u": "UNTERKLASSE:",
 	"race:-u": "VOLK:",
 	"subrace:-u": "UNTERRASSE:",
-	"subrace": "Subrace:",
-	"subrace-ability-increase": "Subrace Ability Score Increase:",
 	"2nd-class:-u": "2te Klasse:",
 	"lvl:-u": "Stufe:",
 	"3rd-class:-u": "3te Klasse:",
@@ -498,7 +495,6 @@
 	"racial": "Volk",
 	"class": "Klasse",
 	"feat": "Talent",
-	"feats": "Feats",
 	"other": "Sonstiges",
 	"partial": "Teilweise",
 	"show_all": "Alle anzeigen",
@@ -618,48 +614,5 @@
 	"charmancer-leveler-what-is-lp": "Look at you, with all that experience. Now it's time to claim your reward. You'll walk through the step-by-step process to make a few decisions, and your character will be at the next level in no time. Changes are saved as you move through the process, but if you change your mind, you'll need to revisit the steps and choices that come after.",
 	"charmancer-compendium-detail-lp": "The Charactermancer currently supports Dungeons & Dragons 5th Edition SRD, Player's Handbook, and Guildmasters' Guide to Ravnica. Xanathar's Guide to Everything will be supported in the coming weeks. You can add the Player's Handbook and Guildmasters' Guide to Ravnica to your compendium in the Marketplace, or the game owner can share their compendium with everyone in the game.",
 	"roll:-u": "ROLL:",
-	"roll": "Roll",
-	"prerequisite:": "Prerequisite:",
-	"back": "BACK",
-	"back-to-top": "Back to Top",
-	"choose-a-class:": "Choose a Class:",
-	"custom-class-name:": "Custom Class Name",
-	"hit-die:": "Hit Die:",
-	"saving-throw-proficiency": "Saving Throw Proficiency",
-	"armor": "Armor",
-	"equipment": "Equipment:",
-	"language": "Language",
-	"skill": "Skill",
-	"tool": "Tool",
-	"weapon": "Weapon",
-	"add-another-feature": "Add Another Feature",
-	"add-another-proficiency": "Add Another Proficiency",
-	"innate-spellcasting:": "Innate Spellcasting:",
-	"spellcasting-ability": "Spellcasting Ability:",
-	"number-of-cantrips": "Number of Cantrips:",
-	"number-of-lvl-1-spells": "Number of Level 1 Spells:",
-	"spell-list": "Spell List:",
-	"ability-score-method": "Ability Score Method:",
-	"select-your-choices": "Select Your Choices:",
-	"input-your-scores": "Input Your Scores:",
-	"choose-background": "Choose a Background:",
-	"personality-traits": "Personality Traits",
-	"ideal": "Ideal",
-	"bond": "Bond",
-	"flaw": "Flaw",
-	"you-have-chosen-starting-gold": "You have chosen starting gold and do not get equipment from your background.",
-	"you-have-created-custom-class": "You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.",
-	"arcane-is-mystery": "The Arcane is a mystery to you.",
-	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
-	"charmancer-a-feat-represents": "A feat represents accomplishment, grit, determination, and expertise. It is the reward for hard work.",
-	"you-really-havent-done": "You really haven't done that much yet",
-	"review-your-choices": "Review your choices:",
-	"race": "Race",
-	"abilities": "Abilities",
-	"bio": "Bio",
-	"name-background": "Name:",
-	"apply-changes": "Apply Changes",
-	"pick-your-equipment": "Pick your equipment",
-	"you-havent-chosen-background": "You have not yet selected a background.",
-	"you-havent-selected-class": "You have not yet selected a class."
+	"prerequisite:": "Prerequisite:"
 }
