--- a/Call_of_Cthulhu_7th_Ed/translations/zh.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/zh.json
@@ -30,12 +30,11 @@
 	"Move rate-r-txt": "Move rate Roll",
 	"HP-u": "生命值",
 	"HP-r-txt": "Hit Points Roll",
-	"": "現在值",
-	"majorwound-u": "",
-	"pulphp-u": "",
+	"current": "現在值",
+	"majorwound-u": "Major Wound",
+	"pulphp-u": "Pulp HP",
 	"luck-u": "幸運",
 	"luck-r-txt": "Luck Roll",
-	"current": "現在值",
 	"damagebonus-u": "傷害加值",
 	"None": "沒有",
 	"build-u": "體格",
@@ -43,6 +42,8 @@
 	"pulp-z": "Pulp",
 	"sanity-r-txt": "Sanity Roll",
 	"start": "起始值",
+	"current-u": "current",
+	"max-u": "max",
 	"tempinsane-u": "臨時性瘋狂",
 	"indefinsane-u": "不定性瘋狂",
 	"bouts-of-madness-u": "Bouts of Madness",
@@ -242,12 +243,21 @@
 	"Other Skill #10": "自定技能 #10",
 	"companions&mounts-u": "Companions & Mounts",
 	"vehicles-u": "Vehicles",
+	"cap-u": "Capacity",
+	"vehicleattack-u": "Vehicular Impact Attack",
+	"operatorskill": "Operator's Skill",
+	"MountedWeaponSkill": "Mounted Weapon Skill",
+	"generalinfo-u": "General Info",
+	"cargo-u": "Cargo",
+	"passengers-u": "Passengers",
 	"san-u": "SAN",
 	"HP-z": "HP",
+	"MP-z": "MP",
 	"armor-z": "Armor",
 	"db-z": "DB",
 	"bdb-u": "B/DB",
 	"damage&db-z": "Dam+DB",
+	"dam-z": "Dam",
 	"MOV-u": "MOV",
 	"skill1": "Skill 1",
 	"skill2": "Skill 2",
