--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -93,7 +93,7 @@
   "Int-p": "(Int)",
   "Intimidate": "Zastraszanie",
   "Intuition": "Intuicja",
-  "L.Arm": "L. Ręka",
+  "L.Arm": "L. Ręk",
   "L.Leg": "L. Noga",
   "Language-i-Magick-p": "<i>Język</i> (Magiczny)",
   "Large": "Duży",
@@ -115,7 +115,7 @@
   "Melee-i-2H": "<i>Broń Biała</i> (Dwuręczna)",
   "Melee-i-Basic": "<i>Broń Biała</i> (Prosta)",
   "Melee-i-Brawling": "<i>Broń Biała </i> (Pięści)",
-  "Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjska)",
+  "Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjnka)",
   "Melee-i-Fencing": "<i>Broń Biała</i> (Szermiercza)",
   "Melee-i-Flail": "<i>Broń Biała</i> (Korbacze)",
   "Melee-i-Parry": "<i>Broń</i> (Parująca)",
@@ -143,8 +143,8 @@
   "PERSONALITY": "OSOBOWOŚĆ",
   "Pray": "Modlitwa",
   "Qualities": "Cechy oręża",
-  "R.Arm": "P. Ręka",
-  "R.Leg": "P. Noga",
+  "R.Arm": "P. Ręk",
+  "R.Leg": "P. Nog",
   "Range": "Zasięg",
   "Range/Reach": "Zasięg",
   "Ranged-Blackpowder": "Broń Zasięg. (Czarnoprochowa)",
