--- a/Night Witches/translations/ko.json
+++ b/Night Witches/translations/ko.json
@@ -19,7 +19,7 @@
     "earnamedal": "받을 자격이 없는 훈장을 받는다.",
     "embracedeath": "죽음을 받아들이고 최후의 운명을 맞이한다.",
     "guts": "담력",
-    "hands": "얼굴:",
+    "hands": "손/얼굴/눈:",
     "harm": "피해",
     "harm1": "1피해:",
     "harm2": "2피해:",
