[Magica Logia] UI Modify
[Magica Logia] Character Sheet Modify

--- a/Magica_Logia/translations/ko.json
+++ b/Magica_Logia/translations/ko.json
@@ -206,5 +206,7 @@
 	"event-table-result-09": "영혼의 떨림, 사랑의 고백, 요염한 포옹……. 목표에게 사랑에 빠진다. 목표에 대한 【운명】이 1점 상승한다. 【운명】의 속성은 「연애」가 된다.",
 	"event-table-result-10": "사제관계, 연인끼리 엇갈리는 마음……. 목표와 당신에 관한 미래를 엿본다. 자신과 목표는 서로에 대한 【운명】이 1점 상승한다. 【운명】의 속성은 각자 자유롭게 결정할 수 있다.",
 	"event-table-result-11": "그리운 얼굴, 소중한 추억, 반려자가 될 거라는 예감……. 목표와 함께 행복한 시간을 보내며 소중한 것을 떠올린다. 목표에 대한 【운명】이 1점 상승한다. 【운명】의 속성은 「혈연」이 된다.",
-	"event-table-result-12": "헌신적인 간호, 마법 같은 축복, 기적……. 목표가 당신을 구원한다. 목표에 대한 【운명】이 1점 상승한다. 【운명】의 속성은 자유롭게 결정할 수 있다. 관계란에 상처가 있다면 상처 하나를 관계란에서 지울 수 있다."
+	"event-table-result-12": "헌신적인 간호, 마법 같은 축복, 기적……. 목표가 당신을 구원한다. 목표에 대한 【운명】이 1점 상승한다. 【운명】의 속성은 자유롭게 결정할 수 있다. 관계란에 상처가 있다면 상처 하나를 관계란에서 지울 수 있다.",
+	"book_list" : "장서",
+	"relation_list" : "관계"
 }
