--- a/Magica_Logia/translations/zh.json
+++ b/Magica_Logia/translations/zh.json
@@ -33,12 +33,12 @@
 	"whisper": "私訊",
 	"whisper_GM": "私訊GM :",
 	"whisper_gm_value": "私訊內容",
-	"img-display-setting": "イメージ表示設定",
+	"img-display-setting": "擲骰顯示圖片設定",
 	"img-display-dec-01": "イメージのアドレスを貼り付けた後,アドレスの隣の丸をクリックしてください。 支援形式:GIF,JPG,PNG。",
 	"img-display-dec-02": "魔法はそれぞれ異なるイメージを添付することができます。 すべての魔法に同じイメージを適用する場合,「魔法イメージ」オプションを利用してください。",
 	"img-magic": "魔法イメージ",
 	"img-none": "使用しない",
-	"img-others": "その他",
+	"img-others": "其他",
 	"placeholder-magic-effect": "魔法効果",
 	"placeholder-spell-phrase": "呪句",
 	"placeholder-img": "イメージアドレス:GIF,JPG,PNG支援",
@@ -94,13 +94,13 @@
 	"scale": "鱗",
 	"chaos": "混沌",
 	"tooth": "牙",
-	"roar": "叫び",
-	"fury": "怒り",
+	"roar": "吼叫",
+	"fury": "憤怒",
 	"wing": "翼",
-	"eros": "エロス",
+	"eros": "性愛",
 	"gravity": "重力",
 	"wind": "風",
-	"flow": "流れ",
+	"flow": "流動",
 	"water": "水",
 	"wave": "波",
 	"freedom": "自由",
@@ -108,37 +108,37 @@
 	"electric": "雷",
 	"flame": "炎",
 	"light": "光",
-	"cycle": "円環",
+	"cycle": "圓環",
 	"word": "物語",
 	"melody": "旋律",
 	"tear": "涙",
-	"farewell": "別れ",
-	"smile": "微笑み",
-	"cherish": "想い",
+	"farewell": "分離",
+	"smile": "微笑",
+	"cherish": "思念",
 	"victory": "勝利",
 	"love": "恋",
 	"passion": "情熱",
-	"healing": "癒し",
+	"healing": "治癒",
 	"time": "時",
 	"memory": "追憶",
 	"riddle": "謎",
-	"lie": "嘘",
+	"lie": "謊言",
 	"anxiety": "不安",
-	"sleep": "眠り",
+	"sleep": "睡眠",
 	"chance": "偶然",
 	"illusion": "幻",
 	"madness": "狂気",
-	"pray": "祈り",
+	"pray": "祈禱",
 	"hope": "希望",
 	"future": "未来",
 	"abyss": "深淵",
 	"decay": "腐敗",
-	"betrayal": "裏切り",
-	"delusion": "迷い",
+	"betrayal": "背叛",
+	"delusion": "迷惘",
 	"indolence": "怠惰",
-	"distortion": "歪み",
+	"distortion": "扭曲",
 	"misfortune": "不幸",
-	"fool": "バカ",
+	"fool": "愚昧",
 	"malice": "悪意",
 	"despair": "絶望",
 	"death": "死",
@@ -149,13 +149,13 @@
 	"song(lost)": "4.歌(封印)",
 	"dream(lost)": "5.夢(封印)",
 	"darkness(lost)": "6.闇(封印)",
-	"SpellEffect": "효과: ",
-	"SpellEffect-z": "효과",
+	"SpellEffect": "呪句: ",
+	"SpellEffect-z": "呪句",
 	"ReciteEffect": "呪句: ",
 	"ReciteEffect-z": "呪句",
 	"fate_done": "使用",
 	"modulation": "変調",
-	"plot_and_tables": "プロット&各種表",
+	"plot_and_tables": "佈局值&各種表",
 	"modulation_table": "変調表",
 	"Seal-dec": "自分の修得しているタイプが装備タイプ以外の魔法からランダムに一つを選ぶ。選んだ魔法のチェック欄をチェックする。その魔法を使用するためには、【魔力】を２点消費しなければいけなくなる。",
 	"Hole-dec": "魔法戦の間、各ラウンドの終了時に自分の【魔力】が１点減少する。",
