--- a/Magica_Logia/translations/zh.json
+++ b/Magica_Logia/translations/zh.json
@@ -21,11 +21,11 @@
 	"duty": "義務",
 	"Status": "状態",
 	"Seal": "封印",
-	"Hole": "綻び",
+	"Hole": "綻放",
 	"Seak": "虚弱",
 	"Weak": "病魔",
 	"Block": "遮断",
-	"Unluck": "不運",
+	"Unluck": "厄運",
 	"Die": "死亡",
 	"Blank": "消滅",
 	"skill": "機能",
@@ -58,7 +58,7 @@
 	"summon": "召喚",
 	"spell": "呪文",
 	"equip": "装備",
-	"None": "なし",
+	"None": "無",
 	"fluid": "可変",
 	"anker": "アンカー",
 	"name": "アンカー名",
