--- a/Magica_Logia/translations/zh.json
+++ b/Magica_Logia/translations/zh.json
@@ -34,18 +34,18 @@
 	"whisper_GM": "私訊GM :",
 	"whisper_gm_value": "私訊內容",
 	"img-display-setting": "擲骰顯示圖片設定",
-	"img-display-dec-01": "粘貼圖像地址後，請按一下地址旁邊的圓圈。支援格式：GIF，JPG，PNG。 ",
-	"img-display-dec-02": "可以添加不同的圖像至魔法。如果想對所有魔法應用相同的圖像，請使用「魔法圖像」選項。 ",
-	"img-magic": "魔法圖像",
+	"img-display-dec-01": "貼上圖片地址後，請按一下地址旁邊的圓圈。支援格式：GIF，JPG，PNG。 ",
+	"img-display-dec-02": "可以添加不同的圖片至魔法。如果想對所有魔法應用相同的圖片，請使用「魔法圖片」選項。 ",
+	"img-magic": "魔法圖片",
 	"img-none": "不使用",
 	"img-others": "其他",
 	"placeholder-magic-effect": "魔法效果",
 	"placeholder-spell-phrase": "咒句",
-	"placeholder-img": "圖像:GIF，JPG，PNG支援",
+	"placeholder-img": "圖片:支援GIF，JPG，PNG",
 	"placeholder-option-open": "打開/關閉選項",
 	"emer-summon": "緊急召喚",
 	"emer-summon-effect": "1D6隨機決定領域，2D6決定指定特技。指定特技的判斷成功時，召喚「（特技名）的精靈」。",
-	"placeholder-anker-detail": "〈錨點〉設定",
+	"placeholder-anker-detail": "《錨點》設定",
 	"auto_skill_matrix": "刻印目錄",
 	"book_and_relation_list": "藏書＆關係目録",
 	"magic_name": "魔法名",
@@ -60,8 +60,8 @@
 	"equip": "装備",
 	"None": "無",
 	"fluid": "可變",
-	"anker": "〈錨點〉",
-	"name": "〈錨點〉名",
+	"anker": "《錨點》",
+	"name": "《錨點》名",
 	"fate": "運命",
 	"link": "屬性",
 	"explan": "設定",
@@ -189,7 +189,7 @@
 	"ordinary-scene-table-result-11": "很是熱鬧的廣場。難道是在舉行祭典嗎? 好像有誰在呼喚你似的。在這個場景中產生1點獸魔素。",
 	"ordinary-scene-table-result-12": "悲劇的予感。家族的不幸，朋友的絕望，同伴之死......看見了如果置之不理就有機會發生的幻象。在這個場景中產生1點闇魔素。",
 	"fumble_table": "大失敗表",
-	"fumble-table-result-01": "魔法災厄降臨到你的〈錨點〉上。發生「命運轉變」。",
+	"fumble-table-result-01": "魔法災厄降臨到你的《錨點》上。發生「命運轉變」。",
 	"fumble-table-result-02": "魔法災厄奪取了你的魔素，從填充中的魔素中，隨意選擇組合並減少 2 點。",
 	"fumble-table-result-03": "魔法制御失敗。【魔力】減少1點。",
 	"fumble-table-result-04": "由於魔法災厄的關係，在該輪結束之前，行為判定修正 -1 。",
